Updated HTML/CSS and added to ReadMe
Added install instructions to the readme and made small tweaks to the
html/css.

--- a/src/style.css
+++ b/src/style.css
@@ -16,13 +16,13 @@ body {
   align-items: center;
 }
 
-#midRight {
+#midTop {
   display: grid;
   justify-content: center;
   align-items: center;
 }
 
-#midLeft {
+#midBottom {
   display: grid;
   justify-content: center;
 }
